# mcu-dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  label.csv
cmake/: AvrHelpers.cmake
cmake/toolchains/: arduino-uno-toolchain.cmake  stm-bluepill-toolchain.cmake
docs/: label.csv  project-description.adoc
docs/labels/: label-0300.adoc  label-0327.adoc  label-0template.adoc
source/: CMakeLists.txt
source/device/: CMakeLists.txt
source/device/pico2w/apps/test_app/: CMakeLists.txt  main.c
source/device/stm_bluepill/: CMakeLists.txt
source/device/stm_bluepill/apps/test_app/: CMakeLists.txt  main.c
source/device/stm_bluepill/startup/: CMakeLists.txt  STM32F103C8TX_FLASH.ld
source/device/stm_bluepill/startup/include/: crt0.h  vectors.h
source/device/stm_bluepill/startup/src/: crt0.c  vectors.c
source/device/uno/: CMakeLists.txt
source/device/uno/apps/test_app/: CMakeLists.txt  main.c
source/host/apps/test_app/: CMakeLists.txt  main.c
